--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-toggle"
+                aria-controls="nav-toggle" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <li class="nav-item"><a href="#" class="navbar-brand"><img
+                        src="https://cdn-icons-png.flaticon.com/512/3069/3069186.png" width="40" height="40"
+                        class="d-inline-block align-text-top">Canary</a>
+            </li>
+            <div class="collapse navbar-collapse" id="nav-toggle">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link">Home</a></li>
+                    <li class="nav-item"><a class="nav-link">Products</a></li>
+                    <li class="nav-item"><a class="nav-link">Company</a></li>
+                    <li class="nav-item"><a class="nav-link">Blog</a></li>
+                </ul>
+
+            </div>
+
+        </div>
+
+    </nav>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
